Update dockerfiles - use newer images, take quarkus into account.