@@ -1,10 +1,10 @@
-FROM gradle:8.7.0-jdk17 AS build
+FROM gradle:9.5.1-jdk21-alpine AS build
 RUN mkdir annotace
 WORKDIR /annotace
 COPY . .
 RUN gradle :core:quarkusBuild -x test
 
-FROM eclipse-temurin:17-jdk
+FROM eclipse-temurin:25-jdk-alpine
 WORKDIR /annotace
 COPY --from=build /annotace/core/build/quarkus-app/lib/      /annotace/lib/
 COPY --from=build /annotace/core/build/quarkus-app/*.jar     /annotace/
@@ -12,4 +12,4 @@ COPY --from=build /annotace/core/build/quarkus-app/app/      /annotace/app/
 COPY --from=build /annotace/core/build/quarkus-app/quarkus/  /annotace/quarkus/
 
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/annotace/quarkus-run.jar"]
+ENTRYPOINT ["java","-XX:+UseCompactObjectHeaders","-jar","/annotace/quarkus-run.jar"]
